--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,19 @@ jobs:
           push: ${{ github.ref == 'refs/heads/main }}
 
       - name: Build image and push database
-        # DO the same for database
+      uses: docker/build-push-action@v2 
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./database
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/database
+        push: ${{ github.ref == 'refs/heads/main }}
 
       - name: Build image and push httpd
-        # DO the same for httpd
+      uses: docker/build-push-action@v2 
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./httpd
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/httpd
+        push: ${{ github.ref == 'refs/heads/main }}
