--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           context: ./simple-api
           # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/simple-api
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v2 
@@ -51,7 +51,7 @@ jobs:
           context: ./database
         # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/database
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v2 
@@ -60,4 +60,4 @@ jobs:
           context: ./httpd
         # Note: tags has to be all lower-case
           tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/httpd
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
