--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           # relative path to the place where source code with Dockerfile is located
           context: ./simple-api
           # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/simple-api
+          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf:simple-api
           push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
@@ -50,7 +50,7 @@ jobs:
         # relative path to the place where source code with Dockerfile is located
           context: ./database
         # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/database
+          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf:database
           push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
@@ -59,5 +59,5 @@ jobs:
         # relative path to the place where source code with Dockerfile is located
           context: ./httpd
         # Note: tags has to be all lower-case
-          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf/httpd
+          tags:  ${{secrets.DOCKERHUB_USER}}/tp-devops-epf:httpd
           push: ${{ github.ref == 'refs/heads/main' }}
